# ht32f523x2

./: .gitignore  CHANGELOG.md  Cargo.toml  HT32F52342_52.svd  HT32F52342_52.svd.original  README.md  device.x  lib.rs
src/: adc.rs  afio.rs  bftm0.rs  ckcu.rs  cmp.rs  crc.rs  ebi.rs  exti.rs  fault_reports.rs  fmc.rs  gpioa.rs  gpiob.rs  gpioc.rs  gpiod.rs  gptm0.rs  i2c0.rs  i2s.rs  lib.rs  mctm0.rs  pdma.rs  pwrcu.rs  rstcu.rs  rtc.rs  sci.rs  sctm0.rs  spi0.rs  sys_tick.rs  uart0.rs  usart0.rs  usb.rs  wdt.rs
src/adc/: adc_cr.rs  adc_dmar.rs  adc_dr0.rs  adc_dr1.rs  adc_dr2.rs  adc_dr3.rs  adc_dr4.rs  adc_dr5.rs  adc_dr6.rs  adc_dr7.rs  adc_iclr.rs  adc_ier.rs  adc_iraw.rs  adc_isr.rs  adc_lst0.rs  adc_lst1.rs  adc_str.rs  adc_tcr.rs  adc_tr.rs  adc_tsr.rs  adc_wcr.rs  cr.rs  dmar.rs  dr0.rs  dr1.rs  dr2.rs  dr3.rs  dr4.rs  dr5.rs  dr6.rs  dr7.rs  iclr.rs  ier.rs  iraw.rs  isr.rs  lst0.rs  lst1.rs  str.rs  tcr.rs  tr.rs  (+2 more)
src/afio/: afio_essr0.rs  afio_essr1.rs  afio_gpacfghr.rs  afio_gpacfglr.rs  afio_gpbcfghr.rs  afio_gpbcfglr.rs  afio_gpccfghr.rs  afio_gpccfglr.rs  afio_gpdcfghr.rs  afio_gpdcfglr.rs  essr0.rs  essr1.rs  gpacfghr.rs  gpacfglr.rs  gpbcfghr.rs  gpbcfglr.rs  gpccfghr.rs  gpccfglr.rs  gpdcfghr.rs  gpdcfglr.rs
src/bftm0/: bftm_cmpr.rs  bftm_cntr.rs  bftm_cr.rs  bftm_sr.rs  cmpr.rs  cntr.rs  cr.rs  sr.rs
src/ckcu/: ahbccr.rs  ahbcfgr.rs  apbccr0.rs  apbccr1.rs  apbcfgr.rs  apbpcsr0.rs  apbpcsr1.rs  ckcu_ahbccr.rs  ckcu_ahbcfgr.rs  ckcu_apbccr0.rs  ckcu_apbccr1.rs  ckcu_apbcfgr.rs  ckcu_apbpcsr0.rs  ckcu_apbpcsr1.rs  ckcu_ckst.rs  ckcu_gccr.rs  (+20 more)
(+603 files in other folders)
