[package]
authors = ["rmsthebest"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for HT32F523x2 microcontrollers"
documentation = "https://docs.rs/ht32f523x2"
edition = "2018"
keywords = ["arm", "cortex-m", "ht32", "svd2rust"]
license = "GPL-3.0"
name = "ht32f523x2"
readme = "README.md"
repository = "https://github.com/rmsthebest/ht32f523x2"
version = "0.3.0"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.0"

[features]
rt = ["cortex-m-rt/device"]



