[package]
authors = ["rmsthebest"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for HT32F523x2 microcontrollers"
documentation = "https://docs.rs/ht32f523x2"
edition = "2021"
keywords = ["arm", "cortex-m", "ht32", "svd2rust"]
license = "GPL-3.0"
name = "ht32f523x2"
readme = "README.md"
repository = "https://github.com/rmsthebest/ht32f523x2"
version = "0.5.0"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
vcell = "0.1"

[features]
rt = ["cortex-m-rt/device"]



